// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`searched_users reducer test Should match initial state 1`] = `
Object {
  "searchText": "",
  "searchedData": Array [],
}
`;

exports[`searched_users reducer test Should set handleText on SEARCHED_USERS/CHANGE_HANDLE 1`] = `
Object {
  "searchText": "kesh",
  "searchedData": Array [],
}
`;

exports[`searched_users reducer test Should set searchedSata on SEARCHED_USERS/DATA_FETCH_SUCCESS 1`] = `
Object {
  "searchText": "",
  "searchedData": Array [
    Object {
      "avatar_url": "https://avatars0.githubusercontent.com/u/22627?v=4",
      "events_url": "https://api.github.com/users/rnmp/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmp/followers",
      "following_url": "https://api.github.com/users/rnmp/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmp/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmp",
      "id": 22627,
      "login": "rnmp",
      "node_id": "MDQ6VXNlcjIyNjI3",
      "organizations_url": "https://api.github.com/users/rnmp/orgs",
      "received_events_url": "https://api.github.com/users/rnmp/received_events",
      "repos_url": "https://api.github.com/users/rnmp/repos",
      "score": 32.814484,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmp/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmp/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmp",
    },
    Object {
      "avatar_url": "https://avatars1.githubusercontent.com/u/58202?v=4",
      "events_url": "https://api.github.com/users/rNm/events{/privacy}",
      "followers_url": "https://api.github.com/users/rNm/followers",
      "following_url": "https://api.github.com/users/rNm/following{/other_user}",
      "gists_url": "https://api.github.com/users/rNm/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rNm",
      "id": 58202,
      "login": "rNm",
      "node_id": "MDQ6VXNlcjU4MjAy",
      "organizations_url": "https://api.github.com/users/rNm/orgs",
      "received_events_url": "https://api.github.com/users/rNm/received_events",
      "repos_url": "https://api.github.com/users/rNm/repos",
      "score": 23.45999,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rNm/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rNm/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rNm",
    },
    Object {
      "avatar_url": "https://avatars3.githubusercontent.com/u/950160?v=4",
      "events_url": "https://api.github.com/users/ramonmedeiros/events{/privacy}",
      "followers_url": "https://api.github.com/users/ramonmedeiros/followers",
      "following_url": "https://api.github.com/users/ramonmedeiros/following{/other_user}",
      "gists_url": "https://api.github.com/users/ramonmedeiros/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/ramonmedeiros",
      "id": 950160,
      "login": "ramonmedeiros",
      "node_id": "MDQ6VXNlcjk1MDE2MA==",
      "organizations_url": "https://api.github.com/users/ramonmedeiros/orgs",
      "received_events_url": "https://api.github.com/users/ramonmedeiros/received_events",
      "repos_url": "https://api.github.com/users/ramonmedeiros/repos",
      "score": 21.389814,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/ramonmedeiros/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/ramonmedeiros/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/ramonmedeiros",
    },
    Object {
      "avatar_url": "https://avatars1.githubusercontent.com/u/11294564?v=4",
      "events_url": "https://api.github.com/users/RNMJD/events{/privacy}",
      "followers_url": "https://api.github.com/users/RNMJD/followers",
      "following_url": "https://api.github.com/users/RNMJD/following{/other_user}",
      "gists_url": "https://api.github.com/users/RNMJD/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/RNMJD",
      "id": 11294564,
      "login": "RNMJD",
      "node_id": "MDQ6VXNlcjExMjk0NTY0",
      "organizations_url": "https://api.github.com/users/RNMJD/orgs",
      "received_events_url": "https://api.github.com/users/RNMJD/received_events",
      "repos_url": "https://api.github.com/users/RNMJD/repos",
      "score": 18.186848,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/RNMJD/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/RNMJD/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/RNMJD",
    },
    Object {
      "avatar_url": "https://avatars3.githubusercontent.com/u/25113191?v=4",
      "events_url": "https://api.github.com/users/RNm-dove/events{/privacy}",
      "followers_url": "https://api.github.com/users/RNm-dove/followers",
      "following_url": "https://api.github.com/users/RNm-dove/following{/other_user}",
      "gists_url": "https://api.github.com/users/RNm-dove/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/RNm-dove",
      "id": 25113191,
      "login": "RNm-dove",
      "node_id": "MDQ6VXNlcjI1MTEzMTkx",
      "organizations_url": "https://api.github.com/users/RNm-dove/orgs",
      "received_events_url": "https://api.github.com/users/RNm-dove/received_events",
      "repos_url": "https://api.github.com/users/RNm-dove/repos",
      "score": 16.22247,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/RNm-dove/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/RNm-dove/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/RNm-dove",
    },
    Object {
      "avatar_url": "https://avatars3.githubusercontent.com/u/18273031?v=4",
      "events_url": "https://api.github.com/users/rnmessick/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmessick/followers",
      "following_url": "https://api.github.com/users/rnmessick/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmessick/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmessick",
      "id": 18273031,
      "login": "rnmessick",
      "node_id": "MDQ6VXNlcjE4MjczMDMx",
      "organizations_url": "https://api.github.com/users/rnmessick/orgs",
      "received_events_url": "https://api.github.com/users/rnmessick/received_events",
      "repos_url": "https://api.github.com/users/rnmessick/repos",
      "score": 15.544891,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmessick/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmessick/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmessick",
    },
    Object {
      "avatar_url": "https://avatars2.githubusercontent.com/u/12515340?v=4",
      "events_url": "https://api.github.com/users/RnmX/events{/privacy}",
      "followers_url": "https://api.github.com/users/RnmX/followers",
      "following_url": "https://api.github.com/users/RnmX/following{/other_user}",
      "gists_url": "https://api.github.com/users/RnmX/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/RnmX",
      "id": 12515340,
      "login": "RnmX",
      "node_id": "MDQ6VXNlcjEyNTE1MzQw",
      "organizations_url": "https://api.github.com/users/RnmX/orgs",
      "received_events_url": "https://api.github.com/users/RnmX/received_events",
      "repos_url": "https://api.github.com/users/RnmX/repos",
      "score": 13.907572,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/RnmX/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/RnmX/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/RnmX",
    },
    Object {
      "avatar_url": "https://avatars3.githubusercontent.com/u/16438085?v=4",
      "events_url": "https://api.github.com/users/rnmanhon/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmanhon/followers",
      "following_url": "https://api.github.com/users/rnmanhon/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmanhon/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmanhon",
      "id": 16438085,
      "login": "rnmanhon",
      "node_id": "MDQ6VXNlcjE2NDM4MDg1",
      "organizations_url": "https://api.github.com/users/rnmanhon/orgs",
      "received_events_url": "https://api.github.com/users/rnmanhon/received_events",
      "repos_url": "https://api.github.com/users/rnmanhon/repos",
      "score": 13.032562,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmanhon/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmanhon/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmanhon",
    },
    Object {
      "avatar_url": "https://avatars3.githubusercontent.com/u/1153129?v=4",
      "events_url": "https://api.github.com/users/rnml/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnml/followers",
      "following_url": "https://api.github.com/users/rnml/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnml/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnml",
      "id": 1153129,
      "login": "rnml",
      "node_id": "MDQ6VXNlcjExNTMxMjk=",
      "organizations_url": "https://api.github.com/users/rnml/orgs",
      "received_events_url": "https://api.github.com/users/rnml/received_events",
      "repos_url": "https://api.github.com/users/rnml/repos",
      "score": 12.221944,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnml/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnml/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnml",
    },
    Object {
      "avatar_url": "https://avatars0.githubusercontent.com/u/10771540?v=4",
      "events_url": "https://api.github.com/users/rnmoge/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmoge/followers",
      "following_url": "https://api.github.com/users/rnmoge/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmoge/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmoge",
      "id": 10771540,
      "login": "rnmoge",
      "node_id": "MDQ6VXNlcjEwNzcxNTQw",
      "organizations_url": "https://api.github.com/users/rnmoge/orgs",
      "received_events_url": "https://api.github.com/users/rnmoge/received_events",
      "repos_url": "https://api.github.com/users/rnmoge/repos",
      "score": 12.1201,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmoge/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmoge/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmoge",
    },
    Object {
      "avatar_url": "https://avatars3.githubusercontent.com/u/5446919?v=4",
      "events_url": "https://api.github.com/users/rnmano/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmano/followers",
      "following_url": "https://api.github.com/users/rnmano/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmano/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmano",
      "id": 5446919,
      "login": "rnmano",
      "node_id": "MDQ6VXNlcjU0NDY5MTk=",
      "organizations_url": "https://api.github.com/users/rnmano/orgs",
      "received_events_url": "https://api.github.com/users/rnmano/received_events",
      "repos_url": "https://api.github.com/users/rnmano/repos",
      "score": 11.985383,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmano/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmano/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmano",
    },
    Object {
      "avatar_url": "https://avatars1.githubusercontent.com/u/2232674?v=4",
      "events_url": "https://api.github.com/users/rnmisrahi/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmisrahi/followers",
      "following_url": "https://api.github.com/users/rnmisrahi/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmisrahi/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmisrahi",
      "id": 2232674,
      "login": "rnmisrahi",
      "node_id": "MDQ6VXNlcjIyMzI2NzQ=",
      "organizations_url": "https://api.github.com/users/rnmisrahi/orgs",
      "received_events_url": "https://api.github.com/users/rnmisrahi/received_events",
      "repos_url": "https://api.github.com/users/rnmisrahi/repos",
      "score": 11.898123,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmisrahi/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmisrahi/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmisrahi",
    },
    Object {
      "avatar_url": "https://avatars0.githubusercontent.com/u/16841587?v=4",
      "events_url": "https://api.github.com/users/rnmourao/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmourao/followers",
      "following_url": "https://api.github.com/users/rnmourao/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmourao/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmourao",
      "id": 16841587,
      "login": "rnmourao",
      "node_id": "MDQ6VXNlcjE2ODQxNTg3",
      "organizations_url": "https://api.github.com/users/rnmourao/orgs",
      "received_events_url": "https://api.github.com/users/rnmourao/received_events",
      "repos_url": "https://api.github.com/users/rnmourao/repos",
      "score": 11.807279,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmourao/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmourao/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmourao",
    },
    Object {
      "avatar_url": "https://avatars3.githubusercontent.com/u/7226616?v=4",
      "events_url": "https://api.github.com/users/RNM49/events{/privacy}",
      "followers_url": "https://api.github.com/users/RNM49/followers",
      "following_url": "https://api.github.com/users/RNM49/following{/other_user}",
      "gists_url": "https://api.github.com/users/RNM49/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/RNM49",
      "id": 7226616,
      "login": "RNM49",
      "node_id": "MDQ6VXNlcjcyMjY2MTY=",
      "organizations_url": "https://api.github.com/users/RNM49/orgs",
      "received_events_url": "https://api.github.com/users/RNM49/received_events",
      "repos_url": "https://api.github.com/users/RNM49/repos",
      "score": 11.473709,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/RNM49/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/RNM49/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/RNM49",
    },
    Object {
      "avatar_url": "https://avatars3.githubusercontent.com/u/9203596?v=4",
      "events_url": "https://api.github.com/users/rnmontufar/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmontufar/followers",
      "following_url": "https://api.github.com/users/rnmontufar/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmontufar/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmontufar",
      "id": 9203596,
      "login": "rnmontufar",
      "node_id": "MDQ6VXNlcjkyMDM1OTY=",
      "organizations_url": "https://api.github.com/users/rnmontufar/orgs",
      "received_events_url": "https://api.github.com/users/rnmontufar/received_events",
      "repos_url": "https://api.github.com/users/rnmontufar/repos",
      "score": 11.391799,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmontufar/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmontufar/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmontufar",
    },
    Object {
      "avatar_url": "https://avatars3.githubusercontent.com/u/20966801?v=4",
      "events_url": "https://api.github.com/users/rnmeducation/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmeducation/followers",
      "following_url": "https://api.github.com/users/rnmeducation/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmeducation/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmeducation",
      "id": 20966801,
      "login": "rnmeducation",
      "node_id": "MDQ6VXNlcjIwOTY2ODAx",
      "organizations_url": "https://api.github.com/users/rnmeducation/orgs",
      "received_events_url": "https://api.github.com/users/rnmeducation/received_events",
      "repos_url": "https://api.github.com/users/rnmeducation/repos",
      "score": 11.177463,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmeducation/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmeducation/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmeducation",
    },
    Object {
      "avatar_url": "https://avatars2.githubusercontent.com/u/13860512?v=4",
      "events_url": "https://api.github.com/users/rnmendoza/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmendoza/followers",
      "following_url": "https://api.github.com/users/rnmendoza/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmendoza/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmendoza",
      "id": 13860512,
      "login": "rnmendoza",
      "node_id": "MDQ6VXNlcjEzODYwNTEy",
      "organizations_url": "https://api.github.com/users/rnmendoza/orgs",
      "received_events_url": "https://api.github.com/users/rnmendoza/received_events",
      "repos_url": "https://api.github.com/users/rnmendoza/repos",
      "score": 11.173383,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmendoza/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmendoza/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmendoza",
    },
    Object {
      "avatar_url": "https://avatars3.githubusercontent.com/u/859740?v=4",
      "events_url": "https://api.github.com/users/RnMss/events{/privacy}",
      "followers_url": "https://api.github.com/users/RnMss/followers",
      "following_url": "https://api.github.com/users/RnMss/following{/other_user}",
      "gists_url": "https://api.github.com/users/RnMss/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/RnMss",
      "id": 859740,
      "login": "RnMss",
      "node_id": "MDQ6VXNlcjg1OTc0MA==",
      "organizations_url": "https://api.github.com/users/RnMss/orgs",
      "received_events_url": "https://api.github.com/users/RnMss/received_events",
      "repos_url": "https://api.github.com/users/RnMss/repos",
      "score": 10.936673,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/RnMss/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/RnMss/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/RnMss",
    },
    Object {
      "avatar_url": "https://avatars3.githubusercontent.com/u/30542600?v=4",
      "events_url": "https://api.github.com/users/rabindramarndi1/events{/privacy}",
      "followers_url": "https://api.github.com/users/rabindramarndi1/followers",
      "following_url": "https://api.github.com/users/rabindramarndi1/following{/other_user}",
      "gists_url": "https://api.github.com/users/rabindramarndi1/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rabindramarndi1",
      "id": 30542600,
      "login": "rabindramarndi1",
      "node_id": "MDQ6VXNlcjMwNTQyNjAw",
      "organizations_url": "https://api.github.com/users/rabindramarndi1/orgs",
      "received_events_url": "https://api.github.com/users/rabindramarndi1/received_events",
      "repos_url": "https://api.github.com/users/rabindramarndi1/repos",
      "score": 10.788766,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rabindramarndi1/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rabindramarndi1/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rabindramarndi1",
    },
    Object {
      "avatar_url": "https://avatars0.githubusercontent.com/u/6450830?v=4",
      "events_url": "https://api.github.com/users/rnmaconeghy/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmaconeghy/followers",
      "following_url": "https://api.github.com/users/rnmaconeghy/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmaconeghy/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmaconeghy",
      "id": 6450830,
      "login": "rnmaconeghy",
      "node_id": "MDQ6VXNlcjY0NTA4MzA=",
      "organizations_url": "https://api.github.com/users/rnmaconeghy/orgs",
      "received_events_url": "https://api.github.com/users/rnmaconeghy/received_events",
      "repos_url": "https://api.github.com/users/rnmaconeghy/repos",
      "score": 10.389736,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmaconeghy/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmaconeghy/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmaconeghy",
    },
    Object {
      "avatar_url": "https://avatars1.githubusercontent.com/u/25427294?v=4",
      "events_url": "https://api.github.com/users/rnmcdowell95/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmcdowell95/followers",
      "following_url": "https://api.github.com/users/rnmcdowell95/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmcdowell95/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmcdowell95",
      "id": 25427294,
      "login": "rnmcdowell95",
      "node_id": "MDQ6VXNlcjI1NDI3Mjk0",
      "organizations_url": "https://api.github.com/users/rnmcdowell95/orgs",
      "received_events_url": "https://api.github.com/users/rnmcdowell95/received_events",
      "repos_url": "https://api.github.com/users/rnmcdowell95/repos",
      "score": 10.3849535,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmcdowell95/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmcdowell95/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmcdowell95",
    },
    Object {
      "avatar_url": "https://avatars2.githubusercontent.com/u/26361162?v=4",
      "events_url": "https://api.github.com/users/rnmurray/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmurray/followers",
      "following_url": "https://api.github.com/users/rnmurray/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmurray/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmurray",
      "id": 26361162,
      "login": "rnmurray",
      "node_id": "MDQ6VXNlcjI2MzYxMTYy",
      "organizations_url": "https://api.github.com/users/rnmurray/orgs",
      "received_events_url": "https://api.github.com/users/rnmurray/received_events",
      "repos_url": "https://api.github.com/users/rnmurray/repos",
      "score": 10.3849535,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmurray/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmurray/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmurray",
    },
    Object {
      "avatar_url": "https://avatars3.githubusercontent.com/u/29107913?v=4",
      "events_url": "https://api.github.com/users/Rnmkr/events{/privacy}",
      "followers_url": "https://api.github.com/users/Rnmkr/followers",
      "following_url": "https://api.github.com/users/Rnmkr/following{/other_user}",
      "gists_url": "https://api.github.com/users/Rnmkr/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Rnmkr",
      "id": 29107913,
      "login": "Rnmkr",
      "node_id": "MDQ6VXNlcjI5MTA3OTEz",
      "organizations_url": "https://api.github.com/users/Rnmkr/orgs",
      "received_events_url": "https://api.github.com/users/Rnmkr/received_events",
      "repos_url": "https://api.github.com/users/Rnmkr/repos",
      "score": 10.279779,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Rnmkr/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Rnmkr/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Rnmkr",
    },
    Object {
      "avatar_url": "https://avatars0.githubusercontent.com/u/17100915?v=4",
      "events_url": "https://api.github.com/users/rnmarkel/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmarkel/followers",
      "following_url": "https://api.github.com/users/rnmarkel/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmarkel/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmarkel",
      "id": 17100915,
      "login": "rnmarkel",
      "node_id": "MDQ6VXNlcjE3MTAwOTE1",
      "organizations_url": "https://api.github.com/users/rnmarkel/orgs",
      "received_events_url": "https://api.github.com/users/rnmarkel/received_events",
      "repos_url": "https://api.github.com/users/rnmarkel/repos",
      "score": 10.097786,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmarkel/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmarkel/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmarkel",
    },
    Object {
      "avatar_url": "https://avatars0.githubusercontent.com/u/28841217?v=4",
      "events_url": "https://api.github.com/users/rnm-patel/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnm-patel/followers",
      "following_url": "https://api.github.com/users/rnm-patel/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnm-patel/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnm-patel",
      "id": 28841217,
      "login": "rnm-patel",
      "node_id": "MDQ6VXNlcjI4ODQxMjE3",
      "organizations_url": "https://api.github.com/users/rnm-patel/orgs",
      "received_events_url": "https://api.github.com/users/rnm-patel/received_events",
      "repos_url": "https://api.github.com/users/rnm-patel/repos",
      "score": 10.045702,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnm-patel/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnm-patel/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnm-patel",
    },
    Object {
      "avatar_url": "https://avatars3.githubusercontent.com/u/7668661?v=4",
      "events_url": "https://api.github.com/users/rnmrheinneckar/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmrheinneckar/followers",
      "following_url": "https://api.github.com/users/rnmrheinneckar/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmrheinneckar/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmrheinneckar",
      "id": 7668661,
      "login": "rnmrheinneckar",
      "node_id": "MDQ6VXNlcjc2Njg2NjE=",
      "organizations_url": "https://api.github.com/users/rnmrheinneckar/orgs",
      "received_events_url": "https://api.github.com/users/rnmrheinneckar/received_events",
      "repos_url": "https://api.github.com/users/rnmrheinneckar/repos",
      "score": 9.941061,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmrheinneckar/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmrheinneckar/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmrheinneckar",
    },
    Object {
      "avatar_url": "https://avatars3.githubusercontent.com/u/8446853?v=4",
      "events_url": "https://api.github.com/users/rnmkr2012/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmkr2012/followers",
      "following_url": "https://api.github.com/users/rnmkr2012/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmkr2012/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmkr2012",
      "id": 8446853,
      "login": "rnmkr2012",
      "node_id": "MDQ6VXNlcjg0NDY4NTM=",
      "organizations_url": "https://api.github.com/users/rnmkr2012/orgs",
      "received_events_url": "https://api.github.com/users/rnmkr2012/received_events",
      "repos_url": "https://api.github.com/users/rnmkr2012/repos",
      "score": 9.564308,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmkr2012/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmkr2012/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmkr2012",
    },
    Object {
      "avatar_url": "https://avatars1.githubusercontent.com/u/7803619?v=4",
      "events_url": "https://api.github.com/users/rnmaggott/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmaggott/followers",
      "following_url": "https://api.github.com/users/rnmaggott/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmaggott/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmaggott",
      "id": 7803619,
      "login": "rnmaggott",
      "node_id": "MDQ6VXNlcjc4MDM2MTk=",
      "organizations_url": "https://api.github.com/users/rnmaggott/orgs",
      "received_events_url": "https://api.github.com/users/rnmaggott/received_events",
      "repos_url": "https://api.github.com/users/rnmaggott/repos",
      "score": 9.405982,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmaggott/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmaggott/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmaggott",
    },
    Object {
      "avatar_url": "https://avatars0.githubusercontent.com/u/32446210?v=4",
      "events_url": "https://api.github.com/users/RNMaximo/events{/privacy}",
      "followers_url": "https://api.github.com/users/RNMaximo/followers",
      "following_url": "https://api.github.com/users/RNMaximo/following{/other_user}",
      "gists_url": "https://api.github.com/users/RNMaximo/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/RNMaximo",
      "id": 32446210,
      "login": "RNMaximo",
      "node_id": "MDQ6VXNlcjMyNDQ2MjEw",
      "organizations_url": "https://api.github.com/users/RNMaximo/orgs",
      "received_events_url": "https://api.github.com/users/RNMaximo/received_events",
      "repos_url": "https://api.github.com/users/RNMaximo/repos",
      "score": 9.382174,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/RNMaximo/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/RNMaximo/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/RNMaximo",
    },
    Object {
      "avatar_url": "https://avatars0.githubusercontent.com/u/26450749?v=4",
      "events_url": "https://api.github.com/users/rnmishra1/events{/privacy}",
      "followers_url": "https://api.github.com/users/rnmishra1/followers",
      "following_url": "https://api.github.com/users/rnmishra1/following{/other_user}",
      "gists_url": "https://api.github.com/users/rnmishra1/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/rnmishra1",
      "id": 26450749,
      "login": "rnmishra1",
      "node_id": "MDQ6VXNlcjI2NDUwNzQ5",
      "organizations_url": "https://api.github.com/users/rnmishra1/orgs",
      "received_events_url": "https://api.github.com/users/rnmishra1/received_events",
      "repos_url": "https://api.github.com/users/rnmishra1/repos",
      "score": 9.360835,
      "site_admin": false,
      "starred_url": "https://api.github.com/users/rnmishra1/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/rnmishra1/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/rnmishra1",
    },
  ],
}
`;
